--- a/static/js/index.html
+++ b/static/js/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous"
         />
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- links index.html to the style.css file -->
 
 </head>
@@ -107,8 +107,8 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
-    <script src="static/js/data.js"></script>
-    <script src="static/js/app.js"></script>
+    <script src="data.js"></script>
+    <script src="app.js"></script>
     <!-- Adding the link to D3.js allows the library to react to the user input -->
     <!-- data.js is linked next so that the data is loaded and can be accessed -->
 </body>
